--- a/Preethi/RE_framework/Main.xaml
+++ b/Preethi/RE_framework/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="934,515" sap2010:WorkflowViewState.IdRef="Main_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1266,827" sap2010:WorkflowViewState.IdRef="Main_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities.XamlIntegration</x:String>
@@ -54,7 +54,6 @@
       <AssemblyReference>System.Memory</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
@@ -64,12 +63,12 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <StateMachine InitialState="{x:Reference __ReferenceID1}" DisplayName="State Machine" sap:VirtualizedContainerService.HintSize="638,636" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+    <StateMachine InitialState="{x:Reference __ReferenceID1}" DisplayName="State Machine" sap:VirtualizedContainerService.HintSize="651,636" sap2010:WorkflowViewState.IdRef="StateMachine_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
           <av:Point x:Key="ShapeLocation">270,2.5</av:Point>
-          <x:Double x:Key="StateContainerWidth">604</x:Double>
+          <x:Double x:Key="StateContainerWidth">617</x:Double>
           <x:Double x:Key="StateContainerHeight">600</x:Double>
           <av:PointCollection x:Key="ConnectorLocation">303,77.5 303,89.5 306.7,89.5</av:PointCollection>
         </scg:Dictionary>
@@ -86,19 +85,17 @@
           <Transition DisplayName="Init success" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_1">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:PointCollection x:Key="ConnectorLocation">300,150.5 300,180.5 243.4,180.5 243.4,249.5</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">300,150.5 300,180.5 303.4,180.5 303.4,249.5</av:PointCollection>
                 <x:Int32 x:Key="SrcConnectionPointIndex">39</x:Int32>
                 <x:Int32 x:Key="DestConnectionPointIndex">46</x:Int32>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Transition.Condition>
-              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="SystemException is Nothing" />
-            </Transition.Condition>
+            <Transition.Condition>[SystemException is Nothing]</Transition.Condition>
             <Transition.To>
               <State x:Name="__ReferenceID0" DisplayName="Get transaction" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_2">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                    <av:Point x:Key="ShapeLocation">163,249.5</av:Point>
+                    <av:Point x:Key="ShapeLocation">223,249.5</av:Point>
                     <av:Size x:Key="ShapeSize">134,61</av:Size>
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                   </scg:Dictionary>
@@ -107,28 +104,26 @@
                   <Transition DisplayName="New transaction" sap2010:WorkflowViewState.IdRef="Transition_2">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">223.3,310.5 223.3,340.5 186.7,340.5 186.7,379.5</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">283.3,310.5 283.3,340.5 276.7,340.5 276.7,459.5</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">35</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">42</x:Int32>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <Transition.Condition>
-                      <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="TransactionItem isnot nothing" />
-                    </Transition.Condition>
+                    <Transition.Condition>[TransactionItem isnot nothing]</Transition.Condition>
                     <Transition.To>
                       <State x:Name="__ReferenceID3" DisplayName="Process transaction" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_3">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                            <av:Point x:Key="ShapeLocation">113,379.5</av:Point>
+                            <av:Point x:Key="ShapeLocation">203,459.5</av:Point>
                             <av:Size x:Key="ShapeSize">134,61</av:Size>
                             <x:Boolean x:Key="IsPinned">False</x:Boolean>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
                         <State.Transitions>
-                          <Transition DisplayName="Success" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_3">
+                          <Transition DisplayName="Success" sap:VirtualizedContainerService.HintSize="457,505" sap2010:WorkflowViewState.IdRef="Transition_3">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <av:PointCollection x:Key="ConnectorLocation">247,419.15 327,419.15 327,283.05 297,283.05</av:PointCollection>
+                                <av:PointCollection x:Key="ConnectorLocation">337,499.15 499,499.15 499,283.05 357,283.05</av:PointCollection>
                                 <x:Int32 x:Key="SrcConnectionPointIndex">48</x:Int32>
                                 <x:Int32 x:Key="DestConnectionPointIndex">40</x:Int32>
                               </scg:Dictionary>
@@ -136,29 +131,12 @@
                             <Transition.To>
                               <x:Reference>__ReferenceID0</x:Reference>
                             </Transition.To>
-                            <Transition.Condition>
-                              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="BusinessRuleException is Nothing And SystemException is Nothing" />
-                            </Transition.Condition>
-                          </Transition>
-                          <Transition DisplayName="Business rule exception" sap2010:WorkflowViewState.IdRef="Transition_4">
-                            <sap:WorkflowViewStateService.ViewState>
-                              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <av:PointCollection x:Key="ConnectorLocation">247,385.6 327,385.6 327,267.8 297,267.8</av:PointCollection>
-                                <x:Int32 x:Key="SrcConnectionPointIndex">4</x:Int32>
-                                <x:Int32 x:Key="DestConnectionPointIndex">20</x:Int32>
-                              </scg:Dictionary>
-                            </sap:WorkflowViewStateService.ViewState>
-                            <Transition.To>
-                              <x:Reference>__ReferenceID0</x:Reference>
-                            </Transition.To>
-                            <Transition.Condition>
-                              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="BusinessRuleException isnot nothing" />
-                            </Transition.Condition>
+                            <Transition.Condition>[BusinessRuleException is Nothing And SystemException is Nothing]</Transition.Condition>
                           </Transition>
                           <Transition DisplayName="System Exception" sap2010:WorkflowViewState.IdRef="Transition_5">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <av:PointCollection x:Key="ConnectorLocation">247,437.45 397,437.45 397,116.95 367,116.95</av:PointCollection>
+                                <av:PointCollection x:Key="ConnectorLocation">337,517.45 573.5,517.45 573.5,116.95 367,116.95</av:PointCollection>
                                 <x:Int32 x:Key="SrcConnectionPointIndex">72</x:Int32>
                                 <x:Int32 x:Key="DestConnectionPointIndex">32</x:Int32>
                               </scg:Dictionary>
@@ -166,9 +144,20 @@
                             <Transition.To>
                               <x:Reference>__ReferenceID1</x:Reference>
                             </Transition.To>
-                            <Transition.Condition>
-                              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="SystemException isnot Nothing" />
-                            </Transition.Condition>
+                            <Transition.Condition>[SystemException isnot Nothing]</Transition.Condition>
+                          </Transition>
+                          <Transition DisplayName="Business rule exception" sap2010:WorkflowViewState.IdRef="Transition_4">
+                            <sap:WorkflowViewStateService.ViewState>
+                              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                <av:PointCollection x:Key="ConnectorLocation">337,465.6 440,465.6 440,298.3 357,298.3</av:PointCollection>
+                                <x:Int32 x:Key="SrcConnectionPointIndex">4</x:Int32>
+                                <x:Int32 x:Key="DestConnectionPointIndex">60</x:Int32>
+                              </scg:Dictionary>
+                            </sap:WorkflowViewStateService.ViewState>
+                            <Transition.To>
+                              <x:Reference>__ReferenceID0</x:Reference>
+                            </Transition.To>
+                            <Transition.Condition>[BusinessRuleException isnot nothing]</Transition.Condition>
                           </Transition>
                         </State.Transitions>
                       </State>
@@ -177,19 +166,17 @@
                   <Transition DisplayName="No Data" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_6">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">163,292.2 123.6,292.2 123.6,190.5</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">223,292.2 193,292.2 193,380.5 143.6,380.5 143.6,350.5</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">53</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">71</x:Int32>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <Transition.Condition>
-                      <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="TransactionItem is nothing" />
-                    </Transition.Condition>
+                    <Transition.Condition>[TransactionItem is nothing]</Transition.Condition>
                     <Transition.To>
                       <State x:Name="__ReferenceID2" DisplayName="Final State" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_5" IsFinal="True">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                            <av:Point x:Key="ShapeLocation">3,129.5</av:Point>
+                            <av:Point x:Key="ShapeLocation">23,289.5</av:Point>
                             <av:Size x:Key="ShapeSize">134,61</av:Size>
                             <x:Boolean x:Key="IsPinned">False</x:Boolean>
                           </scg:Dictionary>
@@ -204,17 +191,15 @@
           <Transition DisplayName="System Exception" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_7">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:PointCollection x:Key="ConnectorLocation">233,132.2 203,132.2 203,172.2 137,172.2</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">233,132.2 96.7,132.2 96.7,289.5</av:PointCollection>
                 <x:Int32 x:Key="SrcConnectionPointIndex">53</x:Int32>
-                <x:Int32 x:Key="DestConnectionPointIndex">52</x:Int32>
+                <x:Int32 x:Key="DestConnectionPointIndex">42</x:Int32>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <Transition.To>
               <x:Reference>__ReferenceID2</x:Reference>
             </Transition.To>
-            <Transition.Condition>
-              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="SystemException isnot nothing" />
-            </Transition.Condition>
+            <Transition.Condition>[SystemException isnot nothing]</Transition.Condition>
           </Transition>
         </State.Transitions>
       </State>
