--- a/Roy/BuildREFramework/Main.xaml
+++ b/Roy/BuildREFramework/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="810,515" sap2010:WorkflowViewState.IdRef="Main_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="501,515" sap2010:WorkflowViewState.IdRef="Main_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities.XamlIntegration</x:String>
@@ -24,6 +24,8 @@
       <x:String>System.Collections.ObjectModel</x:String>
       <x:String>System.Collections</x:String>
       <x:String>System.Activities.DynamicUpdate</x:String>
+      <x:String>System.Runtime.Serialization</x:String>
+      <x:String>System.Runtime.InteropServices</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -45,6 +47,14 @@
       <AssemblyReference>System.Drawing</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
+      <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
+      <AssemblyReference>System.ValueTuple</AssemblyReference>
+      <AssemblyReference>UiPath.Excel</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
+      <AssemblyReference>System.Memory</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
+      <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="REFramework Build" sap:VirtualizedContainerService.HintSize="242,143" sap2010:WorkflowViewState.IdRef="Sequence_7">
@@ -53,20 +63,20 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <StateMachine InitialState="{x:Reference __ReferenceID1}" DisplayName="State Machine" sap:VirtualizedContainerService.HintSize="677,686" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+    <StateMachine InitialState="{x:Reference __ReferenceID1}" DisplayName="Main" sap:VirtualizedContainerService.HintSize="677,686" sap2010:WorkflowViewState.IdRef="StateMachine_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-          <av:Point x:Key="ShapeLocation">190,2.5</av:Point>
+          <av:Point x:Key="ShapeLocation">110,2.5</av:Point>
           <x:Double x:Key="StateContainerWidth">643</x:Double>
           <x:Double x:Key="StateContainerHeight">650.5</x:Double>
-          <av:PointCollection x:Key="ConnectorLocation">193,77.5 183.3,77.5 183.3,89.5</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">140,77.5 139.9,77.5 139.9,99.5</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <State x:Name="__ReferenceID1" DisplayName="Initialization" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_1">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <av:Point x:Key="ShapeLocation">123,89.5</av:Point>
+            <av:Point x:Key="ShapeLocation">93,99.5</av:Point>
             <av:Size x:Key="ShapeSize">134,61</av:Size>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
@@ -75,34 +85,40 @@
           <Transition DisplayName="Init Success" sap2010:WorkflowViewState.IdRef="Transition_1">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:PointCollection x:Key="ConnectorLocation">190,150.5 190,180.5 223.3,180.5 223.3,219.5</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">160,160.5 160,190.5 163.3,190.5 163.3,219.5</av:PointCollection>
                 <x:Int32 x:Key="SrcConnectionPointIndex">39</x:Int32>
                 <x:Int32 x:Key="DestConnectionPointIndex">34</x:Int32>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
+            <Transition.Condition>
+              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="SystemException is nothing" />
+            </Transition.Condition>
             <Transition.To>
               <State x:Name="__ReferenceID0" DisplayName="Get Tranasaction" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_2">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                    <av:Point x:Key="ShapeLocation">163,219.5</av:Point>
+                    <av:Point x:Key="ShapeLocation">103,219.5</av:Point>
                     <av:Size x:Key="ShapeSize">134,61</av:Size>
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
                 <State.Transitions>
-                  <Transition DisplayName="T2" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_2">
+                  <Transition DisplayName="Data Present" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_2">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">230,280.5 230,310.5 303.3,310.5 303.3,341.5</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">170,280.5 170,310.5 293.3,310.5 293.3,429.5</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">39</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">34</x:Int32>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
+                    <Transition.Condition>
+                      <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="ArrayItem isnot Nothing" />
+                    </Transition.Condition>
                     <Transition.To>
                       <State x:Name="__ReferenceID3" DisplayName="Process Tranascation" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_3">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                            <av:Point x:Key="ShapeLocation">243,341.5</av:Point>
+                            <av:Point x:Key="ShapeLocation">233,429.5</av:Point>
                             <av:Size x:Key="ShapeSize">134,61</av:Size>
                             <x:Boolean x:Key="IsPinned">False</x:Boolean>
                           </scg:Dictionary>
@@ -111,7 +127,7 @@
                           <Transition DisplayName="Succes" sap2010:WorkflowViewState.IdRef="Transition_4">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <av:PointCollection x:Key="ConnectorLocation">377,365.9 407,365.9 407,246.95 297,246.95</av:PointCollection>
+                                <av:PointCollection x:Key="ConnectorLocation">367,453.9 432,453.9 432,246.95 237,246.95</av:PointCollection>
                                 <x:Int32 x:Key="SrcConnectionPointIndex">28</x:Int32>
                                 <x:Int32 x:Key="DestConnectionPointIndex">32</x:Int32>
                               </scg:Dictionary>
@@ -119,11 +135,14 @@
                             <Transition.To>
                               <x:Reference>__ReferenceID0</x:Reference>
                             </Transition.To>
+                            <Transition.Condition>
+                              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="BusinessRuleException is Nothing and SystemException is  nothing" />
+                            </Transition.Condition>
                           </Transition>
                           <Transition DisplayName="Business Rule Exception" sap2010:WorkflowViewState.IdRef="Transition_5">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <av:PointCollection x:Key="ConnectorLocation">377,384.2 531,384.2 531,238.04 360,238.04 360,231.7 297,231.7</av:PointCollection>
+                                <av:PointCollection x:Key="ConnectorLocation">367,472.2 484,472.2 484,231.7 237,231.7</av:PointCollection>
                                 <x:Int32 x:Key="SrcConnectionPointIndex">52</x:Int32>
                                 <x:Int32 x:Key="DestConnectionPointIndex">12</x:Int32>
                               </scg:Dictionary>
@@ -131,11 +150,14 @@
                             <Transition.To>
                               <x:Reference>__ReferenceID0</x:Reference>
                             </Transition.To>
+                            <Transition.Condition>
+                              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="BusinessRuleException isnot Nothing" />
+                            </Transition.Condition>
                           </Transition>
                           <Transition DisplayName="System Exception" sap2010:WorkflowViewState.IdRef="Transition_6">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <av:PointCollection x:Key="ConnectorLocation">377,399.45 590,399.45 590,104.75 257,104.75</av:PointCollection>
+                                <av:PointCollection x:Key="ConnectorLocation">367,487.45 562,487.45 562,114.75 227,114.75</av:PointCollection>
                                 <x:Int32 x:Key="SrcConnectionPointIndex">72</x:Int32>
                                 <x:Int32 x:Key="DestConnectionPointIndex">16</x:Int32>
                               </scg:Dictionary>
@@ -143,24 +165,30 @@
                             <Transition.To>
                               <x:Reference>__ReferenceID1</x:Reference>
                             </Transition.To>
+                            <Transition.Condition>
+                              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="SystemException isnot nothing" />
+                            </Transition.Condition>
                           </Transition>
                         </State.Transitions>
                       </State>
                     </Transition.To>
                   </Transition>
-                  <Transition DisplayName="T1" sap2010:WorkflowViewState.IdRef="Transition_8">
+                  <Transition DisplayName="Empty Data" sap2010:WorkflowViewState.IdRef="Transition_8">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">196.5,280.5 196.5,310.5 216.5,310.5 216.5,479.5</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">136.5,280.5 136.5,310.5 103.5,310.5 103.5,519.5</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">19</x:Int32>
-                        <x:Int32 x:Key="DestConnectionPointIndex">18</x:Int32>
+                        <x:Int32 x:Key="DestConnectionPointIndex">58</x:Int32>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
+                    <Transition.Condition>
+                      <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="ArrayItem Is Nothing" />
+                    </Transition.Condition>
                     <Transition.To>
                       <State x:Name="__ReferenceID2" DisplayName="End Tranasaction" sap:VirtualizedContainerService.HintSize="134,61" sap2010:WorkflowViewState.IdRef="State_5" IsFinal="True">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                            <av:Point x:Key="ShapeLocation">183,479.5</av:Point>
+                            <av:Point x:Key="ShapeLocation">3,519.5</av:Point>
                             <av:Size x:Key="ShapeSize">134,61</av:Size>
                             <x:Boolean x:Key="IsPinned">False</x:Boolean>
                           </scg:Dictionary>
@@ -175,20 +203,29 @@
           <Transition DisplayName="Init Failure" sap:VirtualizedContainerService.HintSize="450,505" sap2010:WorkflowViewState.IdRef="Transition_7">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:PointCollection x:Key="ConnectorLocation">123,123.05 93,123.05 93,506.95 183,506.95</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">93,133.05 16.4,133.05 16.4,519.5</av:PointCollection>
                 <x:Int32 x:Key="SrcConnectionPointIndex">41</x:Int32>
-                <x:Int32 x:Key="DestConnectionPointIndex">33</x:Int32>
+                <x:Int32 x:Key="DestConnectionPointIndex">6</x:Int32>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <Transition.To>
               <x:Reference>__ReferenceID2</x:Reference>
             </Transition.To>
+            <Transition.Condition>
+              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="SystemException isnot Nothing" />
+            </Transition.Condition>
           </Transition>
         </State.Transitions>
       </State>
       <x:Reference>__ReferenceID0</x:Reference>
       <x:Reference>__ReferenceID3</x:Reference>
       <x:Reference>__ReferenceID2</x:Reference>
+      <StateMachine.Variables>
+        <Variable x:TypeArguments="s:Exception" Name="SystemException" />
+        <Variable x:TypeArguments="s:Object[]" Name="ArrayData" />
+        <Variable x:TypeArguments="x:Object" Name="ArrayItem" />
+        <Variable x:TypeArguments="ui:BusinessRuleException" Name="BusinessRuleException" />
+      </StateMachine.Variables>
     </StateMachine>
   </Sequence>
 </Activity>
